# pydy

./: .gitignore  .readthedocs.yml  .travis.yml  2d_pendulum_white_noise.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  N_pendulum_randomly_exited_forces.rst  Pendulum_with_elastic_balls.rst  README  README.md  README.rst  appveyor.yml  beginner.rst  benchmark.py  benchmark_functions.py  code.py  disc_on_uneven_street.rst  double_pendulum.py  hw4.1.py  hw4.3.py  hw7.4.py  pydy-dev-env.yml  readthedocs-requirements.txt  results.txt  rolling-ball-uneven-street.rst  rolling_ball_uneven_street.rst  setup.py  test_code.py  whipple.py
.github/: PULL_REQUEST_TEMPLATE.md
appveyor/: install.ps1  run_with_env.cmd
babyboot/: babyboot.py
chaos_pendulum/: chaos_pendulum.py  chaos_pendulum_integrate.m
chaospendulum/: chaos_pendulum.py  chaospendulum.py
conda/: README.rst  pydy-dev-env.yml  pydy-dev.yml  pydy-latest-py27-dev.yml  pydy-oldest-py27-dev.yml
differential_drive/: Differential Drive.ipynb  README.md
docs/: Makefile  api.rst  codegen.rst  conf.py  eom_base.rst  index.rst  models.rst  python_api.rst  rtd-env.yml  system.rst  tutorials.rst  utils.rst
double_pendulum/: Makefile  double_pendulum.m  double_pendulum.py  double_pendulum_integration.py  double_pendulum_ode.cc  double_pendulum_ode.h  double_pendulum_sim.cc
examples/: Cycling leg  README.md  README.rst  __init__.py  pinjoint.py
examples/rattleback/cpp/: CMakeLists.txt  ellipsoid_eq.cc  ellipsoid_equilibrium.cc  ellipsoid_equilibrium.h  ellipsoid_no_slip.cc  paraboloid_no_slip.cc  rattleback_stability.cc  reproduceKane1982.h  reproduceKane1982_sim.cc
hw8/: Integrate_EulersMethod.m  Integrate_ModifiedEulerMethod.m  Integrate_RungeKutta4.m  cart_equationsofmotion.m  cartanimation.m  (+5 more)
(+509 files in other folders)
